# tubelight

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  NEXT_STEPS.md  Overlay-ClickThrough.bat  README.md  diag_run.bat  vcpkg.json
.github/workflows/: ci.yml  pixel_equivalence.yml
cmake/: CompileShaders.cmake
docs/: BEZELS.md  PRESET_AUTHORING.md  USER_GUIDE.md
docs/adr/: 0001-always-on-recordable-and-clickthrough.md  0002-d3d12-dcomp-wgc-hdr-slang-blueprint.md  README.md
docs/manual/: INTEGRATION.md  PENDING.md  build_manual.mjs  build_pdf.mjs  manual.en.txt  manual.es.txt  manual.html  manual.json  package.json  validate-manual.mjs
docs/manual/scripts/: capture_all.ps1  capture_ui.ps1  make_testcard.ps1  testcard_viewer.ps1  testcard_viewer_fs.ps1
docs/perf/: PHASE_3E_BENCH.md
docs/releases/: RELEASE_NOTES_v0.1.1.md  RELEASE_NOTES_v0.1.2.md  RELEASE_NOTES_v0.1.3.md  RELEASE_NOTES_v0.1.4.md  RELEASE_NOTES_v0.1.5.md  RELEASE_NOTES_v0.1.6.md  RELEASE_NOTES_v0.2.0-rc.0.md
docs/research/: SOURCES.md
docs/sessions/: AUDIT_DX12_VS_GL_2026_05_30.md  DIAGNOSIS_CLICKTHROUGH_DX12_2026_05_29.md  SESSION_DEBRIEF_2026_05_27.md  SESSION_DEBRIEF_2026_05_28.md  SESSION_DEBRIEF_2026_05_29.md  SESSION_DEBRIEF_2026_05_29b.md  SESSION_DEBRIEF_2026_05_30.md  SESSION_DEBRIEF_2026_05_30b_OVERLAY.md
packaging/linux/AppImage/: build_appimage.sh
packaging/windows/: tubelight.nsi
profiles/crts/: .gitkeep  basic.json  commodore-1084s.json  generic-pvm.json  mac-classic-white.json  nec-multisync-1.json  nec-multisync-4fg.json  pvm-20m4.json  pvm-8220.json  sharp-cz-614d.json  sharp-x68k-cz602d.json  sharp-x68k-cz603d.json  sony-bvm-20f1u.json  sony-fw900.json  terminal-p3-amber.json  terminal-p31.json  tv-bw-p4.json  wells-gardner-k7000.json
profiles/signals/: .gitkeep  component.json  composite_ntsc.json  composite_pal.json  rf.json  rgb_vga.json  scart_rgb.json  svideo.json
schemas/: .gitkeep  crt_profile.schema.json  signal_profile.schema.json
scripts/: build_windows.bat  make_bezel_png.py  overlay-clickthrough.bat
shaders/: .gitkeep  README.md  fullscreen.vert  pass0_analysis.frag  pass1_dither_reconstruct.frag  pass2_beam_scanlines.frag  pass3_mask.frag  pass4_bloom.frag  pass5_temporal.frag  pass6_composition.frag  pass_minus1_signal.frag
specs/: CONSTITUTION.LOCKED.md  CONTRACTS.md  DESIGN.md  INDEX.md  PLAN.LOCKED.md  RISKS.md  SPEC.LOCKED.md  TASKS.md  TESTS.md
specs/phase-3c/: CONSTITUTION.md  CONTRACTS.md  DESIGN.md  INDEX.md  PLAN.md  RISKS.md  SPEC.md  TASKS.md  TESTS.md
src/: CMakeLists.txt  main.cpp
src/audio/: crt_audio.cpp  crt_audio.h
src/capture/: CMakeLists.txt  pipewire_capture.cpp  pipewire_capture.h  wgc_capture.cpp  wgc_capture.h
src/core/: fbo.cpp  fbo.h  gl_common.h  pipeline.cpp  pipeline.h  quad.cpp  quad.h  shader.cpp  shader.h  texture.cpp  texture.h
src/export/: slangp_exporter.cpp  slangp_exporter.h
src/io/: image_io.cpp  image_io.h  shader_io.cpp  shader_io.h
src/ipc/: ipc.h  ipc_unix.cpp  ipc_win.cpp
src/overlay/: capture_to_disk.cpp  capture_to_disk.h  folder_picker.cpp  folder_picker.h  menu.cpp  menu.h  overlay_mode.h  overlay_mode_stub.cpp  overlay_mode_win.cpp  preset_saver.cpp  preset_saver.h  settings.cpp  settings.h
src/platform/common/vulkan_layer/: CMakeLists.txt  VkLayer_tubelight_overlay.json  layer.cpp
src/platform/linux/preload/: CMakeLists.txt  preload.cpp
src/platform/win/inject/: CMakeLists.txt  backend.cpp  dx11_hook.cpp  dx12_hook.cpp  injector.cpp
src/profile/: crt_profile.cpp  crt_profile.h  profile_loader.cpp  profile_loader.h  signal_profile.cpp  signal_profile.h  validator.cpp  validator.h
src/render/: backend.cpp  backend.h  backend_d3d12.cpp  backend_d3d12.h  backend_gl.cpp  backend_gl.h  handle.h  pass_uniforms.h
tests/: .gitkeep
tests/golden/: dx12_vs_gl_psnr.py
tools/: precommit_check_paths.ps1  precommit_check_paths.sh
